made api call and rendered content

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,3 +1,9 @@
-<p>
-  search works!
-</p>
+<section *ngIf="people">
+  <h2>Who's on the ISS right now?</h2>
+  <input (click)='findAstronauts()' type="submit" value="Show List" />
+  <ul>
+    <li *ngFor="let astronaut of people">
+      <h3>{{astronaut.name}}</h3>
+    </li>
+  </ul>
+</section>
