--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,8 @@
-<section *ngIf="people">
+<section>
   <h2>Who's on the ISS right now?</h2>
   <input (click)='findAstronauts()' type="submit" value="Show List" />
+</section>
+<section *ngIf="people">
   <ul>
     <li *ngFor="let astronaut of people">
       <h3>{{astronaut.name}}</h3>
